<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Polling Application</string>
    <string name="hello_world">This is tse tapp!</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="username">Email</string>
    <string name="password">Password</string>
    <string name="name">Full Name</string>
    <string name="dashboard">Dashboard</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="register_as_admin">Register as Admin</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="not_an_user_register">Not an User? Click Here to Register!</string>
    <string name="subscribe_user">Subscribe</string>
    <string name="approve_user">Approve Users</string>
    <string name="approve">Approve</string>
    <string name="menu">Menu</string>
    <string name="add_pole">Add Pole</string>
    <string name="type_here_question">Type your Pole Question</string>
    <string name="add_option">Option +</string>
    <string name="remove_option">Option -</string>
    <string name="option">Option</string>
    <string name="pole_list">Pole List</string>
    <string name="pole_details">Pole Details</string>
    <string name="pole_question">Pole Question</string>
    <string name="ok">OK</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Push Notifications</string>
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: (%1$s) Please add your google account, then register.</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Pole Server: successfully added device!</string>
    <string name="server_unregistered">From Pole Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Pole Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Pole Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
    <string name="title_activity_response">MainActivity</string>
    <string name="title_activity_pole">Pole</string>
    <string name="post_pole_result">Post Pole Result</string>

</resources>