<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textViewlogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0sp"
        android:background="#FFBB00"
        android:gravity="center"
        android:text="@string/pole_details"
        android:textColor="#FFFBFA"
        android:textSize="@dimen/header_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/input_left_right_margin"
        android:layout_marginLeft="@dimen/input_left_right_margin"
        android:layout_marginRight="@dimen/input_left_right_margin"
        android:background="#FFFFFF"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvPopUpQuestionHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/pole_question"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#21dbd4"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvPopUpQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="This is new text"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#21dbd4" />

        <TextView
            android:id="@+id/tvPopUpOptionMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/option"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvPopUpOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="This is new text"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/btnOk"
            android:layout_width="@dimen/half_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/text_box_space"
            android:background="@drawable/button_shape"
            android:shadowColor="#A85937"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/ok"
            android:textColor="#FFFBFA"
            android:textSize="@dimen/text_size" />
    </LinearLayout>

</LinearLayout>