<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registerFragmentMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity$RegisterFragment" >

    <LinearLayout
        android:id="@+id/registerFragment"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/gradient_bg"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textViewRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0sp"
            android:background="#FFBB00"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="#FFFBFA"
            android:textSize="@dimen/header_text_size" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/input_left_right_margin"
            android:layout_marginRight="@dimen/input_left_right_margin"
            android:layout_marginTop="@dimen/text_box_space"
            android:background="@drawable/round"
            android:gravity="center"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/eTName"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/no_border"
                android:hint="@string/name"
                android:inputType="text"
                android:padding="8sp"
                android:singleLine="true"
                android:textSize="@dimen/text_size" />

            <ImageView
                android:layout_width="40sp"
                android:layout_height="42sp"
                android:layout_marginLeft="-1sp"
                android:background="@drawable/left_round_border"
                android:padding="5sp"
                android:src="@drawable/ic_user_icon" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/input_left_right_margin"
            android:layout_marginRight="@dimen/input_left_right_margin"
            android:layout_marginTop="@dimen/text_box_space"
            android:background="@drawable/round"
            android:gravity="center"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/etRegisterEmail"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/no_border"
                android:hint="@string/username"
                android:inputType="textEmailAddress"
                android:padding="8sp"
                android:singleLine="true"
                android:textSize="@dimen/text_size" />

            <ImageView
                android:layout_width="40sp"
                android:layout_height="42sp"
                android:layout_marginLeft="-1sp"
                android:background="@drawable/left_round_border"
                android:padding="5sp"
                android:src="@drawable/ic_email" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/input_left_right_margin"
            android:layout_marginRight="@dimen/input_left_right_margin"
            android:layout_marginTop="@dimen/text_box_space"
            android:background="@drawable/round"
            android:gravity="center"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/etRegisterPassword"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/no_border"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="8sp"
                android:singleLine="true"
                android:textSize="@dimen/text_size" />

            <ImageView
                android:layout_width="40sp"
                android:layout_height="42sp"
                android:layout_marginLeft="-1sp"
                android:background="@drawable/left_round_border"
                android:padding="5sp"
                android:src="@drawable/ic_key" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/chkbxIsAdmin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/input_left_right_margin"
            android:layout_marginRight="@dimen/input_left_right_margin"
            android:layout_marginTop="@dimen/text_box_space"
            android:checked="false"
            android:text="@string/register_as_admin"
            android:textColor="#21dbd4"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/input_left_right_margin"
            android:layout_marginRight="@dimen/input_left_right_margin"
            android:layout_marginTop="@dimen/text_box_space"
            android:background="@drawable/button_shape"
            android:shadowColor="#A85937"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/register"
            android:textColor="#FFFBFA"
            android:textSize="@dimen/text_size" />
    </LinearLayout>

</RelativeLayout>